# python-engineio

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.md  README.rst  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: tests.yml
docs/: Makefile  api.rst  api_asgiapp.rst  api_async_client.rst  api_async_server.rst  api_client.rst  api_middleware.rst  api_server.rst  api_wsgiapp.rst  client.rst  conf.py  deployment.rst  index.rst  intro.rst  make.bat  server.rst
docs/_static/: index.html
engineio/: __init__.py  async_aiohttp.py  async_asgi.py  async_eventlet.py  async_gevent.py  async_gevent_uwsgi.py  async_sanic.py  async_threading.py  async_tornado.py  asyncio_client.py  asyncio_server.py  asyncio_socket.py  client.py  exceptions.py  json.py  middleware.py  packet.py  payload.py  server.py  socket.py  static_files.py
engineio/async/: eventlet.py  gevent.py  threading.py
engineio/async_drivers/: aiohttp.py  asgi.py  eventlet.py  gevent.py  gevent_uwsgi.py  sanic.py  tornado.py
example/: app.py  requirements.txt
example/templates/: index.html
examples/: README.rst  latency.py  latency_aiohttp.py  simple.py  simple_aiohttp.py
examples/aiohttp/: README.rst
examples/asgi/: README.rst  app.py  latency.py  requirements.txt  simple.py
examples/client/: README.rst
examples/sanic/: README.rst  latency.py  requirements.txt  simple.py
examples/server/: README.rst
examples/static/: engine.io.js
examples/templates/: latency.html  simple_aiohttp.html
examples/tornado/: requirements.txt  simple.py
examples/wsgi/: README.rst  latency.py  requirements.txt
src/engineio/: __init__.py  async_client.py  async_server.py  async_socket.py  asyncio_client.py  asyncio_server.py  asyncio_socket.py  base_client.py  base_server.py  base_socket.py  client.py  client_cookies.py  packet.py  (+3 more)
static/: engine.io.js.2
templates/: index.html
tests/: test_async_aiohttp.py  test_async_asgi.py  test_async_eventlet.py  test_async_tornado.py  test_asyncio_client.py  test_asyncio_server.py  test_asyncio_socket.py  test_client.py  test_middleware.py  test_packet.py  test_payload.py  test_server.py  test_socket.py
(+73 files in other folders)
