[project]
name = "python-engineio"
version = "4.11.2"
authors = [{name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com"}]
description = "Engine.IO server and client for Python"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = ["simple-websocket >= 0.10.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/python-engineio"
"Bug Tracker" = "https://github.com/miguelgrinberg/python-engineio/issues"

[project.optional-dependencies]
client = [
    "requests >= 2.21.0",
    "websocket-client >= 0.54.0",
]
asyncio_client = ["aiohttp >= 3.4"]
docs = ["sphinx"]

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
