[metadata]
name = python-engineio
version = 4.3.3
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Engine.IO server and client for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/python-engineio
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/python-engineio/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.extras_require]
client =
    requests >= 2.21.0
    websocket-client >= 0.54.0
asyncio_client =
    aiohttp >= 3.4
